added icon pic for the top bar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <ul class="top-bar">
   <li id="gmail"><a style="color:black;" href="#">Gmail</a> </li>
   <li id="photo"><a style="color:black;" href="#">图片</a> </li>
-  <li id="manu"><a style="color:black;" href="#"><img src="C:/Sites/the_odin_project/pic/manu.png" alt="菜单"></a>
+  <li id="manu"><a style="color:black;" href="#"><img src="manu.png" alt="菜单"></a>
 </li>
 </ul>
 
